[gd_scene load_steps=4 format=3 uid="uid://dxcsj3awdsmle"]

[ext_resource type="Script" uid="uid://lr7a7283txoq" path="res://Scripts/tela_inicial.gd" id="1_m38ec"]
[ext_resource type="Texture2D" uid="uid://c2g1fltjmv2aj" path="res://image (1).png" id="2_0uc53"]
[ext_resource type="FontFile" uid="uid://cs4h6mlayhywq" path="res://Mini FX, Items & UI/Mini FX, Items & UI/Common Pick-ups/RevMiniPixel.ttf" id="3_gkaaw"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_m38ec")

[node name="fundo" type="TextureRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_0uc53")
expand_mode = 1
stretch_mode = 6
metadata/_edit_use_anchors_ = true

[node name="MenuFases" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="MenuFases"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -29.0
offset_top = -12.0
offset_right = 29.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="Button" type="Button" parent="MenuFases/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_gkaaw")
text = "INICIAR"

[node name="Button2" type="Button" parent="MenuFases/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_gkaaw")
text = "FASES
"

[node name="Button3" type="Button" parent="MenuFases/VBoxContainer"]
layout_mode = 2
theme_override_constants/outline_size = 6
theme_override_fonts/font = ExtResource("3_gkaaw")
text = "SAIR"

[node name="PanelContainer" type="PanelContainer" parent="MenuFases"]
custom_minimum_size = Vector2(200, 100)
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -50.0
offset_right = 100.0
offset_bottom = 50.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_use_anchors_ = true

[node name="GridContainer" type="GridContainer" parent="MenuFases/PanelContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/h_separation = 10
theme_override_constants/v_separation = 10
columns = 5

[node name="Fase1" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "0"

[node name="Fase2" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "1"

[node name="Fase3" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "2"

[node name="Fase4" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "3"

[node name="Fase5" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "4"

[node name="Fase6" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "5"

[node name="Fase7" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "6
"

[node name="Fase8" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "7"

[node name="Fase9" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "8"

[node name="Fase10" type="Button" parent="MenuFases/PanelContainer/GridContainer"]
custom_minimum_size = Vector2(10, 10)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
text = "9"

[node name="ButtonVoltar" type="Button" parent="MenuFases"]
layout_mode = 0
offset_right = 8.0
offset_bottom = 8.0
text = "Voltar
"
